2008-04-14  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Fixed access to "this" inside dynamic scopes.

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::registerForLocal): Always return a register for
        "this", even if we're not optimizing access to other locals. Because
        "this" is a keyword, it's always in a register and always accessible.

        * VM/CodeGenerator.h:
        (KJS::CodeGenerator::shouldOptimizeLocals): Factored out a function
        for determining whether we should optimize access to locals, since
        eval will need to make this test a little more complicated.

2008-04-14  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Adam.
        
        - fix crash when running SunSpider full harness
        
        When growing the register file's buffer to make space for new globals,
        make sure to copy accounting for the fact that the new space is logically
        at the beginning of the buffer in this case, instead of at the end as when
        growing for a new call frame.

        * VM/RegisterFile.cpp:
        (KJS::RegisterFile::newBuffer):
        (KJS::RegisterFile::growBuffer):
        (KJS::RegisterFile::addGlobalSlots):
        * VM/RegisterFile.h:

2008-04-11  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Mark constant pools for global and eval code (collectively known as
        "program code"). (Constant pools for function code are already marked by
        their functions.)
        
        The global object is responsible for marking program code constant
        pools. Code blocks add themselves to the mark set at creation time, and
        remove themselves from the mark set at destruction time.
        
        sunspider --squirrelfish reports a 1% speedup, perhaps because
        generateCode() is now non-virtual.

        * kjs/nodes.cpp: I had to use manual init and delete in this file