@@ -5572,13 +5572,11 @@ ScopeNode::ScopeNode(SourceElements* children, VarStack* varStack, FunctionStack
 
 ProgramNode::ProgramNode(SourceElements* children, VarStack* varStack, FunctionStack* funcStack, bool usesEval, bool needsClosure)
     : ScopeNode(children, varStack, funcStack, usesEval, needsClosure)
-    , m_code(0)
 {
 }
 
 ProgramNode::~ProgramNode()
 {
-    delete m_code;
 }
 
 ProgramNode* ProgramNode::create(SourceElements* children, VarStack* varStack, FunctionStack* funcStack, bool usesEval, bool needsClosure)
@@ -5590,13 +5588,11 @@ ProgramNode* ProgramNode::create(SourceElements* children, VarStack* varStack, F
 
 EvalNode::EvalNode(SourceElements* children, VarStack* varStack, FunctionStack* funcStack, bool usesEval, bool needsClosure)
     : ScopeNode(children, varStack, funcStack, usesEval, needsClosure)
-    , m_code(0)
 {
 }
 
 EvalNode::~EvalNode()
 {
-    delete m_code;
 }
 
 void EvalNode::generateCode(ScopeChain& scopeChain)
@@ -5604,7 +5600,7 @@ void EvalNode::generateCode(ScopeChain& scopeChain)
     JSGlobalObject* globalObject = static_cast<JSGlobalObject*>(scopeChain.bottom());
     ASSERT(globalObject->isGlobalObject());
     
-    m_code = new ProgramCodeBlock(usesEval(), needsClosure(), globalObject);
+    m_code.set(new ProgramCodeBlock(usesEval(), needsClosure(), globalObject));
     
     ASSERT_NOT_REACHED();
 }
@@ -5618,13 +5614,11 @@ EvalNode* EvalNode::create(SourceElements* children, VarStack* varStack, Functio
 
 FunctionBodyNode::FunctionBodyNode(SourceElements* children, VarStack* varStack, FunctionStack* funcStack, bool usesEval, bool needsClosure)
     : ScopeNode(children, varStack, funcStack, usesEval, needsClosure)
-    , m_code(0)
 {
 }
 
 FunctionBodyNode::~FunctionBodyNode()
 {
-    delete m_code;
 }
 
 void FunctionBodyNode::mark()
@@ -5642,9 +5636,9 @@ FunctionBodyNode* FunctionBodyNode::create(SourceElements* children, VarStack* v
 
 void FunctionBodyNode::generateCode(ScopeChain& scopeChain)
 {
-    m_code = new CodeBlock(usesEval(), needsClosure());
+    m_code.set(new CodeBlock(usesEval(), needsClosure()));
 
-    CodeGenerator generator(this, scopeChain, &m_symbolTable, m_code, m_varStack, m_functionStack, m_parameters);
+    CodeGenerator generator(this, scopeChain, &m_symbolTable, m_code.get(), m_varStack, m_functionStack, m_parameters);
     generator.generate();
 
     m_children.shrinkCapacity(0);
@@ -5674,9 +5668,9 @@ void ProgramNode::generateCode(ScopeChain& scopeChain)
     JSGlobalObject* globalObject = static_cast<JSGlobalObject*>(scopeChain.bottom());
     ASSERT(globalObject->isGlobalObject());
     
-    m_code = new ProgramCodeBlock(usesEval(), needsClosure(), globalObject);
+    m_code.set(new ProgramCodeBlock(usesEval(), needsClosure(), globalObject));
     
-    CodeGenerator generator(this, scopeChain, &globalObject->symbolTable(), m_code, m_varStack, m_functionStack);
+    CodeGenerator generator(this, scopeChain, &globalObject->symbolTable(), m_code.get(), m_varStack, m_functionStack);
     generator.generate();
 
     m_children.shrinkCapacity(0);
